@@ -70,6 +70,10 @@ Working version
 - #8928: Move contains_calls and num_stack_slots from Proc to Mach.fundecl
   (Greta Yorsh, review by Florian Angeletti and Vincent Laviron)
 
+- #8968: refactor the generic pattern-traversal functions
+  in Typecore and Typedtree.
+  (Gabriel Scherer, review by Thomas Refis)
+
 ### Code generation and optimizations:
 
 - #8672: Optimise Switch code generation on booleans.
